force-app/main/default/objects/Time_Entry__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the time entry is billable.</description>
    <inlineHelpText>Whether or not the time entry is billable.</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>