force-app/main/default/objects/Time_Entry__c/fields/Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billable_Rate__c</fullName>
    <description>The billable rate for the time entry.</description>
    <inlineHelpText>The billable rate for the time entry.</inlineHelpText>
    <label>Billable Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>