force-app/main/default/objects/Time_Entry__c/fields/Budgeted__c.field-meta.xml
<CustomField>
    <fullName>Budgeted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the time entry counts towards the project budget.</description>
    <inlineHelpText>Whether or not the time entry counts towards the project budget.</inlineHelpText>
    <label>Budgeted</label>
    <type>Checkbox</type>
</CustomField>