force-app/main/default/objects/Time_Entry__c/fields/Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Rate__c</fullName>
    <description>The cost rate for the time entry.</description>
    <inlineHelpText>The cost rate for the time entry.</inlineHelpText>
    <label>Currency Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>