force-app/main/default/objects/Time_Entry__c/fields/Ended_Time__c.field-meta.xml
<CustomField>
    <fullName>Ended_Time__c</fullName>
    <description>Time the time entry was ended (if tracking by start/end times).</description>
    <inlineHelpText>Time the time entry was ended (if tracking by start/end times).</inlineHelpText>
    <label>Ended Time</label>
    <type>Time</type>
</CustomField>