force-app/main/default/objects/Time_Entry__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Number of (decimal time) hours tracked in this time entry.</description>
    <inlineHelpText>Number of (decimal time) hours tracked in this time entry.</inlineHelpText>
    <label>Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>