force-app/main/default/objects/Time_Entry__c/fields/ID_Harvest__c.field-meta.xml
<CustomField>
    <fullName>ID_Harvest__c</fullName>
    <description>Listed as Integer by Harvest API v2</description>
    <label>Harvest ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>