force-app/main/default/objects/Time_Entry__c/fields/Is_Billed__c.field-meta.xml
<CustomField>
    <fullName>Is_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the time entry has been marked as invoiced.</description>
    <inlineHelpText>Whether or not the time entry has been marked as invoiced.</inlineHelpText>
    <label>Is Billed</label>
    <type>Checkbox</type>
</CustomField>