force-app/main/default/objects/Time_Entry__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the time entry has been approved via Timesheet Approval.</description>
    <inlineHelpText>Whether or not the time entry has been approved via Timesheet Approval.</inlineHelpText>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>