force-app/main/default/objects/Time_Entry__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the time entry has been locked.</description>
    <inlineHelpText>Whether or not the time entry has been locked.</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>