force-app/main/default/objects/Time_Entry__c/fields/Is_Running__c.field-meta.xml
<CustomField>
    <fullName>Is_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the time entry is currently running.</description>
    <inlineHelpText>Whether or not the time entry is currently running.</inlineHelpText>
    <label>Is Running</label>
    <type>Checkbox</type>
</CustomField>