force-app/main/default/objects/Time_Entry__c/fields/Locked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Locked_Reason__c</fullName>
    <description>Why the time entry has been locked.</description>
    <inlineHelpText>Why the time entry has been locked.</inlineHelpText>
    <label>Locked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>