force-app/main/default/objects/Time_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes attached to the time entry.</description>
    <inlineHelpText>Notes attached to the time entry.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>