force-app/main/default/objects/Time_Entry__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An object containing the id and name of the associated project.</description>
    <inlineHelpText>An object containing the id and name of the associated project.</inlineHelpText>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>