force-app/main/default/objects/Time_Entry__c/fields/Running__c.field-meta.xml
<CustomField>
    <fullName>Running__c</fullName>
    <description>Ticked if the time entry timer is currently running</description>
    <formula>AND( NOT(ISBLANK(Started_Time__c)), ISBLANK(Ended_Time__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked if the time entry timer is currently running</inlineHelpText>
    <label>Is Running</label>
    <type>Checkbox</type>
</CustomField>