force-app/main/default/objects/Time_Entry__c/fields/Spent_Date__c.field-meta.xml
<CustomField>
    <fullName>Spent_Date__c</fullName>
    <description>Date of the time entry</description>
    <inlineHelpText>Date of the time entry</inlineHelpText>
    <label>Spent Date</label>
    <type>Date</type>
</CustomField>