force-app/main/default/objects/Time_Entry__c/fields/Started_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Time__c</fullName>
    <description>Time the time entry was started (if tracking by start/end times).</description>
    <inlineHelpText>Time the time entry was started (if tracking by start/end times).</inlineHelpText>
    <label>Started Time</label>
    <type>Time</type>
</CustomField>