force-app/main/default/objects/Time_Entry__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An object containing the id and name of the associated task.</description>
    <inlineHelpText>An object containing the id and name of the associated task.</inlineHelpText>
    <label>Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Time_Tracker_Task__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Time_Tracker_Task__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>