force-app/main/default/objects/Time_Entry__c/fields/Time_Tracker_Task__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracker_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An object containing the id and name of the associated task.</description>
    <inlineHelpText>An object containing the id and name of the associated task.</inlineHelpText>
    <label>Time Tracker Task</label>
    <referenceTo>Time_Tracker_Task__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>