force-app/main/default/objects/Time_Entry__c/fields/Timer_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Timer_Started_At__c</fullName>
    <description>Date and time the timer was started (if tracking by duration).</description>
    <inlineHelpText>Date and time the timer was started (if tracking by duration).</inlineHelpText>
    <label>Timer Started At</label>
    <type>DateTime</type>
</CustomField>