force-app/main/default/objects/Time_Entry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A user assignment object of the associated user.</description>
    <inlineHelpText>A user assignment object of the associated user.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>